# sorjordet

./: .dockerignore  .gitignore  Dockerfile  README.md  agents.md  dev.sh  fly.toml  generate_ts_bindings.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  run_in_container.sh
Client/: About.module.css  About.tsx  Admin.module.css  Admin.tsx  App.module.css  App.tsx  FarmFieldForm.tsx  FarmFieldGroupForm.tsx  Fields.tsx  Harvest.tsx  Login.tsx  Map.css  Map.tsx  TopBar.module.css  TopBar.tsx  eslint.config.js  index.css  index.html  index.tsx  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
Client/__old__bindings/: FarmFieldGroup.ts
Client/assets/: site.webmanifest
Client/bindings/: Farm.ts  FarmField.ts  FarmFieldGroup.ts  FarmFieldGroupMeta.ts  FarmFieldMeta.ts  FieldEvent.ts  (+11 more)
Server/: Cargo.toml  sqlx-data.json
Server/.sqlx/: query-06214c273666f486cfff665c59f700c2ed226c849d55c31fe9c975f1f537510d.json  query-08c553b2e49a9bac5ad1c5a70df4ba1ec334b81060de9423e9f3520fc9b2312b.json  query-10c7df0244e22f0ba0c1827ce1b11497afad9e3ce3ef2bade2a3e031593e07db.json  query-16a61bdfd4e671965dd5a6c8113657c32af33ca571a32548cea414ba0e305547.json  query-16ffea9c5c8c0fa255d1a059b43d725e7ea4040d4aa13d842569283530950bc7.json  query-205849eaa0be24245634f45d3737a0fe50a044124790ffd9585f574a7484fd66.json  query-2782f271ceee9fdd1915da8e667be11c5510ee62ddf33449dc757698858ec127.json  query-36ae737315a4efa869ceadebbf0406aaa5baca5e61dfd3e41711d4871dea6548.json  query-38c37401c2d94346797e01646a0da17ff121ca35d935f47a2ea7ae14a997581a.json  query-40bfebdb1ad7a80acbea4f2e64f18e4e809dccf606b095b925a8390635412969.json  query-534e6540eb2a383328c2096551e71fa4ad595ca079e4ed334d4f21bed06e1c8d.json  query-554e62259b8e7366e4ca824399608f68f7cf6e1ad0994764a27348b645b3931d.json  query-583bd022a39185ababec69e0c77c27c31a644622c200e8e326f7522b5b4877bc.json  query-59ce2710de56244bf5f6320e04d9e65f6b1c4d06efdc25458cd0866809a9bc33.json  query-5e16c9f35c69a204d692eaf46ea872eb97d4891d07c3bc8d91a99c250bee0509.json  query-617a938a40450aaff9889560a451e8199d56c781d51ec0e774880db0fa4db6a6.json  query-6360a7874ee9274887937a2858907e47dcbad678c594361906b492bd3ad82b65.json  query-670d742205f29b10538f9b5dc05c13047eb1b60d96da054eab8933f8733ae87b.json  query-687229dde8c8bf04cb0cbbee6fd4e6f07c85690cbe40cd4a0d990db56fd3db02.json  query-6cbbc149bf7a40b84e921946d77c1f63cd8b510d00bb00595011a474eb30cdc3.json  query-9194fb6859fd50418a3c5899071bbe73af72eed8761527d9b44b1c969190ea84.json  query-937c8f8252dd4fa9e52825fd33c6dbded70b70c034c2916486ff87f9d6b80ac2.json  query-99ca62e37056635807192f006ee40f13d66856d87392f5214bf6cb247df18feb.json  query-a28eb8856a022ca4d67ad60951bd1992322b525d58fe6eefb1fd139e4abaa96e.json  query-a443279875ec7456fa468d9b6a5c893fe2419f996e33eee231caad4bd41ccfc6.json  query-a5d120038bce8248442ba83fe6cc4dee9a14d8570be4aff3b87905ff3ff5370e.json  query-a62c6cd66e9ef5e0c05a60ec571e7ab004c66af42109af9cc314b9613b97d63d.json  query-a8dbc4cc1ac2d241aa9f17a43eff7f0570ae1e8b694238122801df8b847274e3.json  query-acdec41f04bf176ddede71244b834e9cdb7bfee46eed1cce52b5582d5fdba3a3.json  query-b0d2073fe52e3b10a8169247de8b4eb9a88c039f3d1031fb4235109038d192d9.json  query-b3b5ea69a488ac6fb5bc141225f5e777459f770dae9ea00d9ab9215ea4e4cc09.json  query-bc875a4f7460b60eebd09385a496bba924f3d22ba0354756964228a53e5dac41.json  query-c00098974baab9c10198bcb358133adaf2c03a596e00eea6fe5962be745e6bf9.json  query-c0381ddfedf33f2d60db55aab819687a96de24eb9835526eed108cba06a69492.json  query-cb1558c72a014fc6901453af97a9759daf65b0efc31430d1c942f0a2321bdfe1.json  query-cf7adf9c5f619498eb77094e3f85308efd3c77923fe9792481f532ee746fe2c6.json  query-dcdc0959371429a8f6f5a4bed4dc9b0ae9339636e4b6d1fcef9e4f8e44bdfe5a.json  query-e64572fe3bff688cc2bb9b2b360acb3d52de4b8ecc34fd76c80adabef3ad7354.json  query-f9797965d91d493058039f3431d9cbea10d90e3873a8476e3bde0dfc520998c1.json
Server/src/: errors.rs  main.rs
Server/src/api/: auth.rs  farm.rs  farm_field.rs  farm_field_group.rs  field_event.rs  harvest_event.rs  harvest_type.rs  login.rs  mod.rs  users.rs
Server/src/auth/: auth.rs  auth_core.rs  login.rs  mod.rs
assets/: fields_v1.json  site.webmanifest
migrations/: 20221204183045_init_migration.sql  20240609191544_add_field_events.sql
src/Server/: .env  Cargo.toml  sqlx-data.json
src/Server/.sqlx/: query-115457910bee0381689bc26e9e9a1fe3b6d51fbfae88485e1020eab1746a3b64.json  query-8add815cbe9a87282b2bf27e978c06a13c5b4768adcdb80c7c13fb4f69d5266f.json  query-9982063b0af37ef92001928ac75f038d09e47718af513b0c830398ca8eed77d6.json  query-b839a93d326c6fa618b73899c435c8122cdf65a2fed7ac0afb58cfed1e31dba5.json
src/Server/src/: main.rs
src/Server/src/api/: auth.rs  db_queries.rs  error_handling.rs  login.rs  mod.rs  routes.rs  types.rs
(+89 files in other folders)
