[package]
name = "sorjordet"
version = "0.1.0"
edition = "2021"
authors = ["..."]
[[bin]]
name = "sorjordet"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
axum = "0.7.5"
axum-extra = {version = "0.9.3", features = ["typed-header"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
sqlx = {version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono"]}
serde = "1.0"
serde_json = "1.0"
# tower = "0.4"
tower-http = {version = "0.5.2", features = ["fs", "cors", "trace", "compression-full", "timeout"]}
ts-rs = {version= "8.1.0", features = ["chrono-impl","no-serde-warnings"]}
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
lazy_static = "1.4"
rand_core = { version = "0.6", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
