[package]
name = "sorjordet"
version = "0.1.0"
edition = "2021"
authors = ["..."]
[[bin]]
name = "sorjordet"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
actix-files = "0.6"
actix-web-lab = "0.18"
tracing = "0.1"
log = "0.4"
env_logger = "0.9"
