[package]
name = "sorjordet"
version = "0.1.0"
edition = "2021"
authors = ["..."]
[[bin]]
name = "sorjordet"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
axum = {version = "0.6", features = ["headers"]}
axum-extra = {version = "0.4", features = ["spa"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
sqlx = {version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"]}
serde = "1.0"
serde_json = "1.0"
# tower = "0.4"
tower-http = {version = "0.3", features = ["fs", "cors", "trace", "compression-full", "timeout"]}
ts-rs = "6.2.1"
argon2 = "0.4.1"
jsonwebtoken = "8.2.0"
lazy_static = "1.4"
rand_core = { version = "0.6", features = ["std"] }
chrono = "0.4.38"
